# stock

./: .gitignore  AGENTS.md  README.md  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
docs/: architecture.md  database-schema.md  development-verification.md  indicator-spec.md  migration-plan.md  requirements-v0.1.md  smoke-test-H-03.md  task-plan.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_initial.sql  0002_condition_trigger_modes.sql  0003_scan_run_snapshots.sql  0004_legacy_import.sql  0005_scan_run_historical_resources.sql
src-tauri/resources/: legacy_presets.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/application/: mod.rs  scan_executor.rs  scan_service.rs
src-tauri/src/commands/: mod.rs  scan_presets.rs  scans.rs  watchlists.rs
src-tauri/src/db/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/indicator/: bollinger.rs  mfi.rs  mod.rs  rsi.rs
src-tauri/src/provider/: fetch_planner.rs  mod.rs  retry.rs
src-tauri/src/provider/yahoo/: dto.rs  mod.rs  parser.rs
src-tauri/src/repository/: daily_bar.rs  daily_bar_basis_tests.rs  daily_bar_tests.rs  instrument.rs  instrument_tests.rs  mod.rs  scan_error.rs  scan_error_tests.rs  scan_preset.rs  scan_preset_tests.rs  scan_result.rs  scan_result_tests.rs  scan_run.rs  scan_run_tests.rs  watchlist.rs  watchlist_tests.rs
src-tauri/src/signal/: mod.rs
src-tauri/tests/: integration_scan.rs
src-tauri/tests/fixtures/yahoo/: duplicate_dates.json  empty_result.json  null_values.json  provider_error.json  valid_chart.json
(+68 files in other folders)
