[package]
name = "stock"
version = "0.1.0"
description = "Personal macOS daily stock scanner"
authors = ["savior714"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "stock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
